everything done except contact

--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-hello
+<!DOCTYPE HTML>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Eamonism</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/main.scss">
+	<link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/skeleton.css">
+	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  	<!-- // <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> -->
+	<script type="text/javascript" src="main.js"></script>
+</head>
+<body>
+	<div class="home-left">
+		<div class="title">EAMONISM</div>
+		<div class="dot"><img src="images/circle.png" /><img src="images/circle.png" /><img src="images/circle.png" /></div>
+	</div>
+	<div class="bird"><img src="images/bwbird.png" id="bird" onmouseover="colorBird()" onmouseout="grayscaleBird()"/></div>
+	<hr>
+	<div class="portfolio-header">PORTFOLIO</div>
+	<hr>
+	<div class="wrap">
+    
+	  <!-- Define all of the tiles: -->
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/7.jpg" />
+	      <div class="titleBox">Butterfly</div>
+	    </div>
+	  </div>
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/1.jpg" />
+	      <div class="titleBox">An old greenhouse</div>
+	    </div>
+	  </div>
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/2.jpg" />
+	      <div class="titleBox">Purple wildflowers</div>
+	    </div>
+	  </div>
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/3.jpg" />
+	      <div class="titleBox">A birdfeeder</div>
+	    </div>
+	  </div>
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/10.jpg" />
+	      <div class="titleBox">Crocus close-up</div>
+	    </div>
+	  </div>
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/4.jpg" />
+	      <div class="titleBox">The garden shop</div>
+	    </div>
+	  </div>
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/5.jpg" />
+	      <div class="titleBox">Spring daffodils</div>
+	    </div>
+	  </div>
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/6.jpg" />
+	      <div class="titleBox">Iris along the path</div>
+	    </div>
+	  </div>
+	  <div class="box">
+	    <div class="boxInner">
+	      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/8.jpg" />
+	      <div class="titleBox">The garden blueprint</div>
+	    </div>
+	  </div>
+	</div>
+	<!-- /#wrap -->
+	<hr>
+	<div class="portfolio-header">ARTIST BIO</div>
+	<hr>
+
+	<div class="eamon"><img src="images/eamonpic.jpg" /></div>
+	<div class="fname">EAMON</div>
+	<div class="lname">MURPHY</div>
+	<div class="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vestibulum nulla non arcu posuere facilisis. Maecenas fringilla felis quis dapibus dapibus. Ut id odio tellus. Vivamus malesuada, dui quis euismod aliquam, nulla purus lobortis orci, congue venenatis nunc arcu sed risus. Pellentesque ante libero, suscipit eget ligula vitae, pellentesque consequat nunc. Phasellus ultricies feugiat justo. Donec mollis neque eu condimentum rutrum. Nam massa erat, congue sed velit id, suscipit pulvinar mi. Maecenas non aliquet massa. Proin congue pharetra sapien eu consectetur. Vestibulum quis lacus vel mauris finibus malesuada.</div>
+
+	<hr>
+	<div class="portfolio-header">CONTACT</div>
+	<hr>
+</body>
+</html>
