contact and footer sections

--- a/index.html
+++ b/index.html
@@ -91,5 +91,9 @@
 	<hr>
 	<div class="portfolio-header">CONTACT</div>
 	<hr>
+	<img src="images/email.png" id="logo" /><div class="email">eamonmurphy@gmail.com</div><br>
+	<img src="images/phone.png" id="logo" /><div class="phone">239.961.3399</div>
+
+	<div class="footer">Jubil Co.</div>
 </body>
 </html>
