--- a/index.html
+++ b/index.html
@@ -25,55 +25,55 @@
 	<div class="wrap">
 		<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/7.jpg" />
+	      		<img src="images/port1.jpg" />
 	      		<div class="titleBox">Butterfly</div>
 	    	</div>
 	  	</div>
 	  	<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/1.jpg" />
+	      		<img src="images/port2.jpg" />
 	      		<div class="titleBox">An old greenhouse</div>
 	    	</div>
 	  	</div>
 	  	<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/2.jpg" />
+	      		<img src="images/port3.jpg" />
 	      		<div class="titleBox">Purple wildflowers</div>
 	    	</div>
 	  	</div>
 	  	<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/3.jpg" />
+	      		<img src="images/port4.jpg" />
 	      		<div class="titleBox">A birdfeeder</div>
 	    	</div>
 	  	</div>
 	  	<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/10.jpg" />
+	      		<img src="images/port5.jpg" />
 	      		<div class="titleBox">Crocus close-up</div>
 	    	</div>
 	  	</div>
 	  	<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/4.jpg" />
+	      		<img src="images/port6.jpg" />
 	      		<div class="titleBox">The garden shop</div>
 	    	</div>
 	  	</div>
 	  	<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/5.jpg" />
+	      		<img src="images/port7.jpg" />
 	      		<div class="titleBox">Spring daffodils</div>
 	    	</div>
 	  	</div>
 	  	<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/6.jpg" />
+	      		<img src="images/port8.jpg" />
 	      		<div class="titleBox">Iris along the path</div>
 	    	</div>
 	  	</div>
 	  	<div class="box">
 	    	<div class="boxInner">
-	      		<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/8.jpg" />
+	      		<img src="images/port9.jpg" />
 	      		<div class="titleBox">The garden blueprint</div>
 	    	</div>
 	  	</div>
