--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<div class="eamon"><img src="images/eamonpic.jpg" /></div>
 	<div class="fname">EAMON</div>
 	<div class="lname">MURPHY</div>
-	<div class="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vestibulum nulla non arcu posuere facilisis. Maecenas fringilla felis quis dapibus dapibus. Ut id odio tellus. Vivamus malesuada, dui quis euismod aliquam, nulla purus lobortis orci, congue venenatis nunc arcu sed risus. Pellentesque ante libero, suscipit eget ligula vitae, pellentesque consequat nunc. Phasellus ultricies feugiat justo. Donec mollis neque eu condimentum rutrum. Nam massa erat, congue sed velit id, suscipit pulvinar mi. Maecenas non aliquet massa. Proin congue pharetra sapien eu consectetur. Vestibulum quis lacus vel mauris finibus malesuada.</div>
+	<div class="bio"> Eamon Murphy is an artist currently living and working at Dartmouth College in Hanover, New Hampshire. Primarily self-taught, Murphy has spent the last three years developing what scholars have dubbed “Eamonism”—a unique, stylistic synthesis of old-fashioned pen-and-pencil work and a tasteful dash of digital media. A champion of the belief that art deserves to be shared for a reasonable price, Eamon has made his body of completed works available for online consumption. Yes, that’s right, an art career that began on the margins of fourth-grade social studies notebooks has—at last—arrived at your very screen. We invite you to join us as we continue this journey. Please, have a look around.</div>
 
 	<!-- CONTACT -->
 	<hr>
